export const snapshot = {};

snapshot[`parcelCSS plugin 1`] = `2`;

snapshot[`parcelCSS plugin 2`] = `
{
  formats: [
    {
      includesPath: undefined,
      key: ".tmpl.ts",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.js",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".tmpl.json",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".json",
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".md",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".js",
      removeExtension: undefined,
    },
    {
      includesPath: undefined,
      key: ".ts",
      removeExtension: undefined,
    },
    {
      includesPath: "_includes",
      key: ".njk",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yaml",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".yml",
      removeExtension: true,
    },
    {
      includesPath: undefined,
      key: ".css",
      removeExtension: undefined,
    },
  ],
}
`;

snapshot[`parcelCSS plugin 3`] = `
[
]
`;

snapshot[`parcelCSS plugin 4`] = `
{
  content: '@import "variables.css";@import "./text.css";',
  data: {
    content: '@import "variables.css";
@import "./text.css";
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/index.css",
  },
  dest: {
    ext: ".css",
    path: "/index",
  },
  src: {
    ext: ".css",
    path: "/index",
  },
}
`;

snapshot[`parcelCSS plugin 5`] = `
{
  content: ".text{font-family:var(--font-family)}.text p{color:var(--color);box-shadow:0 0 .5em var(--background);-webkit-backface-visibility:hidden;backface-visibility:hidden}",
  data: {
    content: ".text {
  font-family: var(--font-family);

  & p {
    color: var(--color);
    box-shadow: 0 0 0.5em var(--background);
    backface-visibility: hidden;
  }
}
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/text.css",
  },
  dest: {
    ext: ".css",
    path: "/text",
  },
  src: {
    ext: ".css",
    path: "/text",
  },
}
`;
